# ddr

./: CMakeLists.txt  README.md  package.xml
config/: mapper_params_online_async.yaml  nav2_params.yaml
launch/: map_and_localization.launch.py  robot_gazebo_classic.launch.py
robot_desc/: robot.urdf.xacro  ros2_control.xacro
rviz/: config.rviz
src/: camera_motion_controller.py  log_traj_viz.py  logger.py  navigation_to_pose.py  pytree_test.py  test_server.py  traj_viz_marker.py  trajectory_visualization.py  viz_server.py  waypoint_navigation.py  waypoint_pytree.py
trajectory_log/: log_2025-04-03_11-30-49.csv  log_2025-04-03_11-45-22.csv  log_2025-04-03_11-46-47.csv
